--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,8 @@
 MONGO_URI=localhost:27017
+MONGO_USER=root
+MONGO_PASSWORD=password
+EXPRESS_USER=root
+EXPRESS_PASSWORD=password
 
 USE_MOCK_ITEM_REPO=False
 USE_MOCK_PHONE_REPO=False
