feat: add entrypoint for index creation

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -13,4 +13,10 @@ RUN pip install -r requirements.txt
 
 EXPOSE 8000
 
-CMD ["uvicorn", "src.main:app", "--reload", "--host", "0.0.0.0", "--port", "8000"]
+COPY ./docker/ /app/docker/
+
+RUN addgroup --system app && adduser -S app -G app
+RUN chown -R app:app /app
+RUN chmod +x /app/docker/entrypoint.sh
+
+ENTRYPOINT ["sh", "/app/docker/entrypoint.sh"]
