--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,4 @@ EXPRESS_PASSWORD=password
 USE_MOCK_ITEM_REPO=False
 USE_MOCK_PHONE_REPO=False
 USE_MOCK_LAPTOP_REPO=False
+USE_MOCK_CATEGORY_REPO=False
